
* Current
** Added
Incorporated High level prototypes into makefile
Added logic to catch non-existent input files and report a useful error message
Added DP! to stage2 forth

** Changed
Extended VPATH in makefile to shorten dependency names
Updated checksum for stage2 forth

** Fixed
Stack offset bug in stage2 forth was found and fixed by reepca in record time
Fixed 2DUP and ?DUP in stage2 forth

** Removed

* 0.0.7 - 2017-06-03
** Added
Added HACKING guide covering critical sections
Added rom building steps to make
Added more advanced cleaning options to makefile
Extended stage2 lisp with null?
Extended stage2 lisp with string=?
Exported DEHEX rom image to makefile and added checksum

** Changed
Cleaned up x86 notes and moved into x86 folder
Changed the results of make all to include all of the essential roms
Made makefile parallel build friendly

** Fixed
Fixed failure to lookup symbols that are identical but are in different lexical scopes
Updated Bootstrapping instructions to reflect new checksum and recommendation for most minimal requirements
Fixed flaws in existing makefile
Added build instructions to README and listed dependencies
Imported High level prototypes for new functions

** Removed
Purged notes that no longer apply or belong outside of stage0
Removed redundent clean options from makefile

* 0.0.6 - 2017-05-20
** Added
Added absolute addresses to High level assembler output to aid in debugging of complex assembly programs
Added Let expressions to High Level prototype lisp
Added Let expressions to stage2 lisp implementation

** Changed
Converted High level prototype lisp from dynamic scope to Lexical
Converted stage2 lisp implementation from dynamic scope to Lexical

** Fixed
Made Web debugger provide more useful information
Fixed regression in web debugger's ability to read input files
Fixed regression in stage2 lisp garbage collection interacting with let expressions
Fixed SHA256SUM of stage2 lisp to match new binary result

** Removed
