@@ -1,6 +1,6 @@
 8f465d3ec1cba00a7d024a1964e74bb6d241f86a73c77d95d8ceb10d09c8f7b9  roms/CAT
 59f0502748af32e3096e026a95e77216179cccfe803a05803317414643e2fcec  roms/DEHEX
-110dfd9cf2187ed8bf68a07510f054d96a55ec26377fe9d3a8e1f44ced2313f4  roms/forth
+a0d760e98534ec7abea6677e80fac98d2ec42d5bb1f02b1575122831fed46651  roms/forth
 4c146297da8c672955698a82207295b28feb389c9856a2c6ea6a60ce7e84260a  roms/lisp
 2b9727381aec15a504c0898189fbc2344209d8e04451e3fa5d743e08e38f64cf  roms/M0
 24a4d74eb2eb7a82e68335643855658b27b5a6c3b13db473539f3e08d6f26ceb  roms/SET
